# robust-DevOps

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  conf.py  index.rst  pyproject.toml
data-processing/: README.md  bar_graphs.ipynb  download_artifacts.ipynb  evaluation_csv.ipynb  evaluation_json.ipynb  general_project_outliers.ipynb  line_graphs.ipynb
data-processing/csv/: FreeCodeCamp.csv  alpine.csv  aos.csv  bulma.csv  gatsby.csv  ionic.csv  mermaid.csv  n8n.csv  react-beautiful-dnd.csv  react-hook-form.csv  todomvc.csv  uppy.csv  vuecli.csv
evaluation_data/alpine/: Dockerfile  test.sh
evaluation_data/angular/: Dockerfile  test.sh
evaluation_data/aos/: Dockerfile  test.sh
evaluation_data/base_image/: Dockerfile  noise-tool_setup.sh
evaluation_data/bulma/: Dockerfile  test.sh
evaluation_data/carbon/: Dockerfile  test.sh
evaluation_data/cypress-io/: Dockerfile  test.sh
evaluation_data/docs/: Dockerfile  test.sh
evaluation_data/freecodecamp/: Dockerfile  test.sh
evaluation_data/gatsby/: Dockerfile  test.sh
evaluation_data/graphql-engine/: Dockerfile  test.sh
evaluation_data/ionic/: Dockerfile  test.sh
evaluation_data/mermaid/: Dockerfile  test.sh
evaluation_data/metabase/: Dockerfile  change_reporter.sh  test.sh
evaluation_data/n8n/: Dockerfile  test.sh
evaluation_data/react-beautiful-dnd/: Dockerfile  test.sh
evaluation_data/react-hook-form/: Dockerfile  test.sh
evaluation_data/react-select/: Dockerfile  test.sh
evaluation_data/shiki/: Dockerfile  test.sh
noiseTool/: main.py  parser.py  utils.py
tests/: test_utils.py
(+13 files in other folders)
